agregacion del idioma ingles en las paginas de erp

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <i class="fa fa-bars"></i>
                   </button>
                   <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/SST LOGO-DARK.png" class="logo logo-display" alt="Logo SST">
-                    <img src="assets/img/SST LOGO-DARK.png" class="logo logo-scrolled" alt="Logo SST">
+                    <img src="assets/img/SST LOGO-DARK.png" class="logo logo-display" loading="lazy" alt="Logo SST">
+                    <img src="assets/img/SST LOGO-DARK.png" class="logo logo-scrolled" loading="lazy" alt="Logo SST">
                   </a>
                 </div>
               </div>
@@ -96,12 +96,12 @@
                       <li class="search"><a href="#"><i class="far fa-search"></i></a></li>
                       <li class="dropdown">
                         <a class="idioma" href="#">
-                          <img id="bandera" src="./assets/img/peru.png" alt=""> 
+                          <img id="bandera" src="./assets/img/peru.png" alt="" loading="lazy"> 
                           <span id="idioma" class="mt-5 idiom-change"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag"> Español</a></li>
-                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag"> English</a></li>                                    
+                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag" loading="lazy"> Español</a></li>
+                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag" loading="lazy"> English</a></li>                                    
                         </ul>
                             </div>
                             <!-- End Atribute Navigation -->
@@ -211,7 +211,7 @@
 
                     <div class="choose-us-style-one col-xl-5 col-lg-12 mt-30">
                         <div class="thumb">
-                            <img src="assets/img/que-hacemos.png" alt="Que hacemos">
+                            <img src="assets/img/que-hacemos.png" alt="Que hacemos" loading="lazy">
                         </div>
                     </div>
                 
@@ -236,7 +236,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/talento-inicio.png" alt="Talento humano">
+                                        <img src="assets/img/talento-inicio.png" alt="Talento humano" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -254,7 +254,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="./software/arquitectura-software.html">
                                     <div class="thumb">
-                                        <img src="assets/img/IA-inicio.png" alt="Software">
+                                        <img src="assets/img/IA-inicio.png" alt="Software" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -273,7 +273,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="./software/analisis-datos.html">
                                     <div class="thumb">
-                                        <img src="assets/img/software-inicio.png" alt="Inteligencia artificial">
+                                        <img src="assets/img/software-inicio.png" alt="Inteligencia artificial" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -292,7 +292,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/infraestructura-inicio.png" alt="Infraestructura">
+                                        <img src="assets/img/infraestructura-inicio.png" alt="Infraestructura" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -313,7 +313,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="./software/cyber-security.html">
                                     <div class="thumb">
-                                        <img src="assets/img/nube-inicio.png" alt="Cloud services">
+                                        <img src="assets/img/nube-inicio.png" alt="Cloud services" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -336,7 +336,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/redes-inicio.png" alt="Redes">
+                                        <img src="assets/img/redes-inicio.png" alt="Redes" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -382,7 +382,7 @@
 
                 <div class="choose-us-style-one col-xl-5 col-lg-12 mt-40">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos2.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos2.png" alt="Thumb" loading="lazy">
                     </div>
                 </div>
                 
@@ -407,7 +407,7 @@
                 <div class="col-xl-4 col-md-6 single-item">
                     <div class="blog-style-one">
                         <div class="thumb">
-                            <a href="#"><img src="assets/img/blog/blog-1.png" alt="desarrollo web"></a>
+                            <a href="#"><img src="assets/img/blog/blog-1.png" alt="desarrollo web" loading="lazy"></a>
                         </div>
                         <div class="info">
                             <div class="meta">
@@ -431,7 +431,7 @@
                 <div class="col-xl-4 col-md-6 single-item">
                     <div class="blog-style-one">
                         <div class="thumb">
-                            <a href="#"><img src="assets/img/blog/blog-2.png" alt="Thumb"></a>
+                            <a href="#"><img src="assets/img/blog/blog-2.png" alt="Thumb" loading="lazy"></a>
                         </div>
                         <div class="info">
                             <div class="meta">
@@ -455,7 +455,7 @@
                 <div class="col-xl-4 col-md-6 single-item">
                     <div class="blog-style-one">
                         <div class="thumb">
-                            <a href="#"><img src="assets/img/blog/blog-3.png" alt="Thumb"></a>
+                            <a href="#"><img src="assets/img/blog/blog-3.png" alt="Thumb" loading="lazy"></a>
                         </div>
                         <div class="info">
                             <div class="meta">
@@ -490,7 +490,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p data-i18n="fdescription">
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
