optimizacion en la pagina

--- a/automatizacion-con-ia.html
+++ b/automatizacion-con-ia.html
@@ -80,7 +80,7 @@
                     <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                         <div class="collapse navbar-collapse" id="navbar-menu">
 
-                            <img src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                                 <i class="fa fa-times"></i>
                             </button>
@@ -180,7 +180,7 @@
                                     
                                     <li class="dropdown">
                                         
-                                        <a class="idioma" href="#"><img src="./assets/img/peru.png" alt=""> <span class="mt-5 idiom-change">ES</span></a>
+                                        <a class="idioma" href="#"><img src="./assets/img/peru.png" alt="" loading="lazy"> <span class="mt-5 idiom-change">ES</span></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="#">Español</a></li>
                                             <li><a href="#">English</a></li>
@@ -220,7 +220,7 @@
         <div class="container">
             <div class="project-details-items">
                 <div class="thumb">
-                    <img src="assets/img/que-hacemos/banner-historia-usuario-1.png" alt="Thumb">
+                    <img src="assets/img/que-hacemos/banner-historia-usuario-1.png " alt="Automatizacion con ia" loading="lazy">
                 </div>
                 <div class="top-info">
                     <div class="row">
@@ -304,10 +304,10 @@
                     </p>
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
-                            <img src="assets/img/que-hacemos/ejemplo1-historia1.png" alt="Thumb">
+                            <img src="assets/img/que-hacemos/ejemplo1-historia1.png" alt="Thumb" loading="lazy">
                         </div>
                         <div class="col-lg-6 col-md-6">
-                            <img src="assets/img/que-hacemos/ejemplo2-historia1.png" alt="Thumb">
+                            <img src="assets/img/que-hacemos/ejemplo2-historia1.png" alt="Thumb" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p>
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
