--- a/internet-de-las-cosas.html
+++ b/internet-de-las-cosas.html
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="project-details-items">
                 <div class="thumb">
-                    <img src="assets/img/que-hacemos/banner-historia-usuario-2.png" alt="Thumb">
+                    <img src="assets/img/que-hacemos/banner-historia-usuario-2.png" alt="Thumb" loading="lazy">
                 </div>
                 <div class="top-info">
                     <div class="row">
@@ -237,10 +237,10 @@
                     </p>
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
-                            <img src="assets/img/que-hacemos/ejemplo1-historia1.png" alt="Thumb">
+                            <img src="assets/img/que-hacemos/ejemplo1-historia1.png" alt="Thumb" loading="lazy">
                         </div>
                         <div class="col-lg-6 col-md-6">
-                            <img src="assets/img/que-hacemos/ejemplo2-historia1.png" alt="Thumb">
+                            <img src="assets/img/que-hacemos/ejemplo2-historia1.png" alt="Thumb" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p>
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
