--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -103,12 +103,12 @@
                       <li class="search"><a href="#"><i class="far fa-search"></i></a></li>
                       <li class="dropdown">
                         <a class="idioma" href="#">
-                          <img id="bandera" src="./assets/img/peru.png" alt=""> 
+                          <img id="bandera" src="./assets/img/peru.png" alt="" loading="lazy"> 
                           <span id="idioma" class="mt-5 idiom-change"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag"> Español</a></li>
-                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag"> English</a></li>                                    
+                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag" loading="lazy"> Español</a></li>
+                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag" loading="lazy"> English</a></li>                                    
                         </ul>
                             </div>
                             <!-- End Atribute Navigation -->
@@ -216,7 +216,7 @@
 
                 <div class="col-lg-5 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/que-hacemos/La innovación el motor del futuro.png" alt="Thumb">
+                        <img src="assets/img/que-hacemos/La innovación el motor del futuro.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -239,7 +239,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/que-hacemos/servicios-infraestructura.png" alt="Thumb">
+                                        <img src="assets/img/que-hacemos/servicios-infraestructura.png" alt="Thumb" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -258,7 +258,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="./software/index.html">
                                     <div class="thumb">
-                                        <img src="assets/img/que-hacemos/servicios-software.png" alt="Thumb">
+                                        <img src="assets/img/que-hacemos/servicios-software.png" alt="Thumb" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -278,7 +278,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/que-hacemos/servicios-consultoria.png" alt="Thumb">
+                                        <img src="assets/img/que-hacemos/servicios-consultoria.png" alt="Thumb" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -296,7 +296,7 @@
                                 <div class="item gallery-mixed-item">
                                     <a href="#">
                                     <div class="thumb">
-                                        <img src="assets/img/que-hacemos/servicios-marketing.png" alt="Thumb">
+                                        <img src="assets/img/que-hacemos/servicios-marketing.png" alt="Thumb" loading="lazy">
                                     </div>
                                     <div class="content">
                                         <div class="info">
@@ -332,7 +332,7 @@
                             <div class="col-12 col-md-3">
                                 <h5 class="subtitular-producto" data-i18n="erpcomercial">Trace ERP Comercial</h5>
                                 <div class="thumb">
-                                <img src="assets/img/que-hacemos/productos-erp-comercial.png" alt="Thumb">
+                                <img src="assets/img/que-hacemos/productos-erp-comercial.png" alt="Thumb" loading="lazy">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30" data-i18n="comercialdes">Optimiza la gestión de tu empresa con Trace ERP, el sistema informático integrado que simplifica y unifica todas las áreas de tu negocio en una sola plataforma. Toma decisiones informadas y eficaces, optimiza tus procesos y lleva tus operaciones al siguiente nivel.</p>
                                 <a class="btn-simple-producto" href="trace-erp-comercial.html" ><span data-i18n="productsbutton">Ver más</span><i class="fas fa-arrow-right move-right-producto"></i></a>
@@ -344,7 +344,7 @@
                             <div class="col-12 col-md-3">
                                 <h5 class="subtitular-producto" data-i18n="erpindustrial">Trace ERP Industrial</h5>
                                 <div class="thumb">
-                                <img src="assets/img/que-hacemos/productos-erp-industrial.png" alt="Thumb">
+                                <img src="assets/img/que-hacemos/productos-erp-industrial.png" alt="Thumb" loading="lazy">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30" data-i18n="industrialdes">Trace ERP Industrial es la solución informática de gestión y planificación de recursos empresariales de SST diseñada para empresas del sector industrial. Con ella, podrás integrar todas las áreas de tu negocio en un solo sistema, lo que te permitirá mejorar la eficiencia, reducir los costos y tomar decisiones más informadas.</p>
                                 <a class="btn-simple-producto" href="trace-erp-industrial.html" ><span data-i18n="productsbutton">Ver más</span><i class="fas fa-arrow-right move-right-producto"></i></a>
@@ -356,7 +356,7 @@
                             <div class="col-12 col-md-3">
                                 <h5 class="subtitular-producto" data-i18n="erphotel">Trace ERP Hoteles</h5>
                                 <div class="thumb">
-                                <img src="assets/img/que-hacemos/productos-erp-hotel.png" alt="Thumb">
+                                <img src="assets/img/que-hacemos/productos-erp-hotel.png" alt="Thumb" loading="lazy">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30" data-i18n="hoteldes">Optimiza la gestión de tu empresa con Trace ERP, el sistema informático integrado que simplifica y unifica todas las áreas de tu negocio en una sola plataforma. Toma decisiones informadas y eficaces, optimiza tus procesos y lleva tus operaciones al siguiente nivel.</p>
                                 <a class="btn-simple-producto" href="trace-erp-hotel.html"><span data-i18n="productsbutton">Ver más</span><i class="fas fa-arrow-right move-right-producto"></i></a>
@@ -368,7 +368,7 @@
                             <div class="col-12 col-md-3">
                                 <h5 class="subtitular-producto" data-i18n="erprestaurant">Trace ERP Restaurante</h5>
                                 <div class="thumb">
-                                <img src="assets/img/que-hacemos/productos-erp-restaurante.png" alt="Thumb">
+                                <img src="assets/img/que-hacemos/productos-erp-restaurante.png" alt="Thumb" loading="lazy">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30" data-i18n="restaurantdes">Trace ERP Industrial es la solución informática de gestión y planificación de recursos empresariales de SST diseñada para empresas del sector industrial. Con ella, podrás integrar todas las áreas de tu negocio en un solo sistema, lo que te permitirá mejorar la eficiencia, reducir los costos y tomar decisiones más informadas.</p>
                                 <a class="btn-simple-producto" href="trace-erp-restaurante.html"><span data-i18n="productsbutton">Ver más</span><i class="fas fa-arrow-right move-right-producto"></i></a>
@@ -392,7 +392,7 @@
                 <div class="col-xl-4 col-md-6 single-item">
                     <div class="blog-style-one">
                         <div class="thumb">
-                            <a href="#"><img src="assets/img/que-hacemos/historia-usuario-1.png" alt="Thumb"></a>
+                            <a href="#"><img src="assets/img/que-hacemos/historia-usuario-1.png" alt="Thumb" loading="lazy"></a>
                         </div>
                         <div class="info">
                             <div class="meta">
@@ -415,15 +415,6 @@
                                 <span data-i18n="usuariodes">Caso de estudio</span>
                             </div>
                         </div>
-                        <!-- <div class="author">
-                            <div class="thumbs">
-                                <a href="#"><img src="assets/img/100x100.png" alt="Author"></a>
-                            </div>
-                            <div class="author-info">
-                                <h5>Bruham Ibrahi</h5>
-                                <span>March 16, 2022</span>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
                 <!-- Single Item -->
@@ -431,7 +422,7 @@
                 <div class="col-xl-4 col-md-6 single-item">
                     <div class="blog-style-one">
                         <div class="thumb">
-                            <a href="#"><img src="assets/img/que-hacemos/historia-usuario-2.png" alt="Thumb"></a>
+                            <a href="#"><img src="assets/img/que-hacemos/historia-usuario-2.png" alt="Thumb" loading="lazy"></a>
                         </div>
                         <div class="info">
                             <div class="meta">
