--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -77,7 +77,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                 <div class="collapse navbar-collapse" id="navbar-menu">
-                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                     <i class="fa fa-times"></i>
                   </button>
@@ -99,12 +99,12 @@
                       <li class="search"><a href="#"><i class="far fa-search"></i></a></li>
                       <li class="dropdown">
                         <a class="idioma" href="#">
-                          <img id="bandera" src="./assets/img/peru.png" alt=""> 
+                          <img id="bandera" src="./assets/img/peru.png" alt="" loading="lazy"> 
                           <span id="idioma" class="mt-5 idiom-change"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag"> Español</a></li>
-                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag"> English</a></li>                                    
+                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag " loading="lazy"> Español</a></li>
+                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag" loading="lazy"> English</a></li>                                    
                         </ul>
                             </div>
                             <!-- End Atribute Navigation -->
@@ -245,7 +245,7 @@
 
                 <div class="col-lg-5 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos/somos.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos/somos.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -302,7 +302,7 @@
 
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos/valores-2-SST.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos/valores-2-SST.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -403,7 +403,7 @@
 
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -425,7 +425,7 @@
             <div class="row align-center">
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -447,7 +447,7 @@
             <div class="row align-center">
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb">
+                        <img src="assets/img/quienes-somos/ejemplo.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -478,7 +478,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p data-i18n="fdescription">
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
