--- a/talento-humano-software.html
+++ b/talento-humano-software.html
@@ -151,7 +151,7 @@
                             <div class="blog-item-box">
                                 
                                 <div class="thumb">
-                                    <img src="assets/img/blog/blog-1-portada.png" alt="Thumb">
+                                    <img src="assets/img/blog/blog-1-portada.png" alt="Thumb" loading="lazy">
                                 </div>
                                 <div class="info">
                                     <h3 class="heading-black cabecera">La importancia del talento humano y el desarrollo del software</h3>
@@ -224,7 +224,7 @@
 
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/blog/registro-boletin.png" alt="Thumb">
+                        <img src="assets/img/blog/registro-boletin.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -240,7 +240,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p>
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
