--- a/trace-erp-hotel.html
+++ b/trace-erp-hotel.html
@@ -75,7 +75,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                 <div class="collapse navbar-collapse" id="navbar-menu">
-                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                     <i class="fa fa-times"></i>
                   </button>
@@ -97,12 +97,12 @@
                       <li class="search"><a href="#"><i class="far fa-search"></i></a></li>
                       <li class="dropdown">
                         <a class="idioma" href="#">
-                          <img id="bandera" src="./assets/img/peru.png" alt=""> 
+                          <img id="bandera" src="./assets/img/peru.png" alt="" loading="lazy"> 
                           <span id="idioma" class="mt-5 idiom-change"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag"> Español</a></li>
-                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag"> English</a></li>                                    
+                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag" loading="lazy"> Español</a></li>
+                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag" loading="lazy"> English</a></li>                                    
                         </ul>
                             </div>
                             <!-- End Atribute Navigation -->
@@ -303,7 +303,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p data-i18n="fdescription">
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
