--- a/inteligencia-negocios-empresas.html
+++ b/inteligencia-negocios-empresas.html
@@ -76,7 +76,7 @@
                     <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                         <div class="collapse navbar-collapse" id="navbar-menu">
 
-                            <img src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                                 <i class="fa fa-times"></i>
                             </button>
@@ -152,7 +152,7 @@
                             <div class="blog-item-box">
                                 
                                 <div class="thumb">
-                                    <img src="assets/img/blog/blog-3-portada.png" alt="Thumb">
+                                    <img src="assets/img/blog/blog-3-portada.png" alt="Thumb" loading="lazy">
                                 </div>
                                 <div class="info">
                                     <h3 class="heading-black cabecera">Cómo las soluciones de inteligencia de negocios están ayudando a las empresas a tomar decisiones informadas</h3>
@@ -221,7 +221,7 @@
 
                 <div class="col-lg-6 faq-style-one">
                     <div class="thumb">
-                        <img src="assets/img/blog/registro-boletin.png" alt="Thumb">
+                        <img src="assets/img/blog/registro-boletin.png" alt="Thumb" loading="lazy">
                     </div>
                 </div> 
 
@@ -237,7 +237,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p>
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
