--- a/tecnologia-actual.html
+++ b/tecnologia-actual.html
@@ -77,7 +77,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                 <div class="collapse navbar-collapse" id="navbar-menu">
-                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                  <img src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                     <i class="fa fa-times"></i>
                   </button>
@@ -99,12 +99,12 @@
                       <li class="search"><a href="#"><i class="far fa-search"></i></a></li>
                       <li class="dropdown">
                         <a class="idioma" href="#">
-                          <img id="bandera" src="./assets/img/peru.png" alt=""> 
+                          <img id="bandera" src="./assets/img/peru.png" alt="" loading="lazy"> 
                           <span id="idioma" class="mt-5 idiom-change"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag"> Español</a></li>
-                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag"> English</a></li>                                    
+                            <li><a href="#" data-lang="es" data-i18n="es"><img id="flag" src="./assets/img/peru.png" alt="Peru Flag" loading="lazy"> Español</a></li>
+                            <li><a href="#" data-lang="en" data-i18n="en"><img id="flag" src="./assets/img/usa.png" alt="USA Flag" loading="lazy"> English</a></li>                                    
                         </ul>
                             </div>
                             <!-- End Atribute Navigation -->
@@ -195,7 +195,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-1.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-1.png" alt="Desarrollo web" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -216,7 +216,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-2.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-2.png" alt="Transformacion digital" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -238,7 +238,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-3.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-3.png" alt="inteligencia de negocios" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -258,7 +258,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-4.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-4.png" alt="Tecnologia" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -279,7 +279,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-5.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-5.png" alt="cableado estructurado" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -301,7 +301,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-6.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-6.png" alt="ERP" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -321,7 +321,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-7.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-7.png" alt="Inteligencia artificial" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -342,7 +342,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-8.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-8.png" alt="Ciberseguridad" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -364,7 +364,7 @@
                     <div class="col-xl-4 col-md-6 single-item">
                         <div class="blog-style-one">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/blog-9.png" alt="Thumb"></a>
+                                <a href="#"><img src="assets/img/blog/blog-9.png" alt="Transformacion digital" loading="lazy"></a>
                             </div>
                             <div class="info">
                                 <div class="meta">
@@ -410,7 +410,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo" loading="lazy">
                             <p data-i18n="fdescription">
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
